# gemini-translator

./: Cargo.toml
src/: api.rs  gui.rs  main.rs  screen_capture.rs
